--- a/src/main.tex
+++ b/src/main.tex
@@ -225,11 +225,18 @@
 		\skill{\faGlobe}{International geopolitics}
 		\skill{\faSwimmer}{Swimming, Basket-ball}
 
+	\profilesection{Honors \& awards}
+		\skill{\faAward}{NDS CEO Award · Jan 2006}
+		\skill{\faAward}{CSI Awards 2014}
+
+  \profilesection{Teaching, Talks }
+		\skill{\faChalkboardTeacher}{HTML5 coach (India, Israel, UK, US)}
+		\skill{\faChalkboardTeacher}{WebRTC (Intl dev conf, Berlin)}
+
 	\profilesection{Short Bio}
 	\aboutme{
-With over 26 years of experience in web development for digital TV, media platforms, and mobile devices, I have led the architecture, development, and deployment of two major Azure-based projects. My role involves collaborating with a team of developers and a QA specialist to enhance our software stack through module creation, code reviews, and the implementation of agile practices. I am passionate about innovating web solutions that are user-friendly and scalable, leveraging technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
+    With over 26 years of experience in web development across digital TV, media platforms, and mobile devices, I have led the architecture, development, and deployment of numerous projects. My leadership role included enhancing our software stack by creating modules, conducting code reviews, and implementing agile practices. I am committed to developing user-friendly and scalable web solutions using technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
 }
-
 %-------------------------------------------------------------------------------
 %                         TABLE ENTRIES RIGHT COLUMN
 %-------------------------------------------------------------------------------
@@ -308,7 +315,7 @@ With over 26 years of experience in web development for digital TV, media platfo
 \begin{cvtable}
     \cvitemRight{May,\\2015\\–\\Dec,\\2016}
     {Front-End Developer}
-    {Abbeal, Canal+, Issy Les Moulineaux}
+    {Abbeal, Canal+, Paris}
     {
       \textbf{Role}: Development and maintenance of WebApp interfaces for digital TV receivers (STB) across various platforms including TNT, SATELLITE, and IPTV, reaching millions of subscribers.\\
       * \textbf{Front-End}: Managed with WEBPACK, featuring HTML/JS/CSS execution in a Qt/webkit instance on a Linux system. Utilized ES2015 standards with Babel transpilation, GRUNT build management, and NODE.js.\\
@@ -343,9 +350,9 @@ With over 26 years of experience in web development for digital TV, media platfo
     {Cisco, Paris}
     {
       \textbf{Project}: Development of a WebApp for ZON TV Portugal.\\
-        * Led the design and implementation using Vanilla JS, CSS3, and HTML5, creating a custom UI manager for MVC view arrangement.\\
-        * Developed essential components such as channel lists, channel banners, and EPG grids.\\
-        * Managed continuous integration with Grunt and Jenkins, oversaw agile processes, and maintained project oversight via JIRA.\\
+        Led the design and implementation using Vanilla JS, CSS3, and HTML5, creating a custom UI manager for MVC view arrangement.
+        Developed essential components such as channel lists, channel banners, and EPG grids.
+        Managed continuous integration with Grunt and Jenkins, oversaw agile processes, and maintained project oversight via JIRA.\\
       \textbf{Outcome}:
         Delivered a fully functional proof of concept that enhanced STB interaction with backend systems, significantly improving user experience.
     }
@@ -359,18 +366,40 @@ With over 26 years of experience in web development for digital TV, media platfo
 \newpage
 \makethirdsidebar
 
-\cvsection{Publications}
-\subsection{Journals}
-	\begin{itemize}
-	{\small
-	\item mmm}
-\end{itemize}
-\vskip20pt
- \subsection{Conferences}
-\begin{itemize}
-{\small
-\item ccc}
-		\end{itemize}
+
+\begin{cvtable}
+    \cvitemRight{Jan,\\2014\\–\\Jul,\\2014}
+    {BackboneJS + ThreeJS Front-End Developer}
+    {Cisco, Paris}
+    {
+      \textbf{Project}: Development of an HTML5 app for Belgacom on RDK middleware.\\
+      \textbf{Responsibilities}: Developed interactive features using CSS3D for GPU hardware acceleration, and managed data interactions using vanilla WebSockets and AJAX within a BackboneJS framework.
+       Integrated complex WebGL content managed by Three.JS according to COLLADA standards for 3D object models, enhanced with animations via Tween.JS.
+       Adapted the application for tablet platforms like iPad (iOS8) and Nexus 10 (Android) using Hammer.JS for touch event handling.
+
+      \textbf{Challenges}: Packaged the WebApp using cross-platform tools like Adobe PhoneGap and CocoonJS, addressing performance optimizations and compatibility issues on low-end STBs without WebGL support.
+       Explored various rendering options (Three.JS CanvasRenderer, CSSRenderer, Parallax scrolling) to maintain performance and visual quality.
+
+      \textbf{Outcome}: Successfully delivered a proof of concept that balanced performance with hardware acceleration, leading the competition.
+    }
+\end{cvtable}
+
+\begin{cvtable}
+    \cvitemRight{Mar,\\2013\\–\\Jan,\\2014}
+    {CSS3D + HTML5/JS Front-End Developer}
+    {France}
+    {
+      \textbf{Project}: Development of HTML5, CSS3D applications for embedded devices (smart TV, Raspberry Pi), showcased at CES 2014.\\
+      \textbf{Responsibilities}:
+          Implemented application features across multiple devices including LG TVs, HDMI sticks, tablets, and laptops using HTML, JS, CSS3D, and WebGL.\\
+          Utilized BackboneJS for MVC framework, ThreeJS for 3D modeling, and TweenJS for animations.\\
+          Enhanced performance with hardware acceleration assessments across various HTML5 engines like QT5/Webkit1, WebKitNix, and Chromium.\\
+          Managed cross-compilation efforts for platforms including LG TV, Raspberry Pi, Cotton Candy (FXI), and MacOSX.\\
+          Compiled and built GStreamer for Windows and MacOSX, ensuring compatibility and performance.\\
+      \textbf{Outcome}: Achieved high performance and compatibility across all targeted devices, contributing to a successful presentation at CES and further engagements with Belgacom and Zon TV.\\
+    }
+\end{cvtable}
+
 
 
 \end{document}
