--- a/src/main.tex
+++ b/src/main.tex
@@ -98,13 +98,12 @@
 	\profilesection{Skills}
     \chartlabel{Programmatic languages:}\\
       \pointskillNinety{}{TypeScript, JavaScript}
-      \pointskillNinety{}{HTML (HTML 5)}
-      \pointskillNinety{}{CSS (Css3, Css 3D)}
+      \pointskillNinety{}{HTML (HTML 5), CSS (3D)}
       \pointskillEighty{}{PHP (v7 et v5)}
       \pointskillSeventy{}{Python (v2 et v3)}
       \pointskillSixty{}{C\# (.NET Framework, Mono)}
-      \pointskillForty{}{Java (Fx, Swing, Maven)}
-      \pointskillForty{}{C/C++ (cross-compilation)}
+      \pointskillFifty{}{Java (Fx, Swing, Maven)}
+      \pointskillFifty{}{Matlab}
       \pointskillForty{}{QT (4 and 5)}
     \chartlabel{Front-end (web):}\\
       \pointskillNinety{}{Angular (9/10/14)}
@@ -112,10 +111,11 @@
       \pointskillSeventy{}{React}
       \pointskillSeventy{}{RxJS / Observables}
       \pointskillSeventy{}{SCSS / SASS}
-      \pointskillSixty{}{Bootstrap (Responsive)}
-      \pointskillFifty{}{Backbone}
-      \pointskillForty{}{VueJS}
-      \pointskillThirty{}{ThreeJS (3D)}
+      \pointskillSeventy{}{Bootstrap (Responsive)}
+      \pointskillSixty{}{Backbone}
+      \pointskillFifty{}{VueJS}
+      \pointskillForty{}{ThreeJS (3D)}
+      \pointskillThirty{}{LaTeX (Typesetting)}
     \chartlabel{Back-end:}\\
       \pointskillNinety{}{OpenAPI/Swagger (TSOA)}
       \pointskillSeventy{}{Express (Node.js)}
@@ -123,13 +123,15 @@
       \pointskillSixty{}{Yii (PHP framework)}
       \pointskillThirty{}{Django (Python framework)}
       \pointskillThirty{}{Elixir (Robust scalability)}
-      \pointskillTwenty{}{LaTeX: (Typesetting)}
+      \pointskillThirty{}{Knex (Postgres, SQLite)}
     \chartlabel{Database:}\\
       \pointskillNinety{}{DynamoDB / (MongoDB)}
       \pointskillEighty{}{ElasticSearch}
-      \pointskillSeventy{}{PostGres}
-      \pointskillEighty{}{Sqlite (or MySql)}
+      \pointskillSeventy{}{PostGres, Sqlite, MySql}
       \pointskillForty{}{Microsoft SQL Server}
+      \pointskillSeventy{}{MySQLWorkbench, DBeaver}
+
+
 }
 
 
@@ -139,15 +141,12 @@
 \addtobacksidebar{
 \vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
 \chartlabel{AWS Cloud:}\\
-\pointskillNinety{}{EC2, S3}
-\pointskillEighty{}{SES, SNS}
+\pointskillNinety{}{EC2, S3, CloudWatch}
 \pointskillNinety{}{Lambdas (layer)}
 \pointskillNinety{}{Secrets Manager}
-\pointskillEighty{}{IAM}
+\pointskillEighty{}{IAM, ECR, SES, SNS}
 \pointskillEighty{}{CloudFront (CDN)}
-\pointskillEighty{}{CloudWatch}
 \pointskillSeventy{}{Elastic Beanstalk}
-\pointskillSeventy{}{ECR}
 \pointskillSeventy{}{Step Functions}
 \pointskillTwenty{}{Fargate (ECS)}
 \pointskillEighty{}{Route53 (DNS)}
@@ -169,7 +168,7 @@
 \chartlabel{Multimedia:}\\
 \pointskillNinety{}{FFMPEG, mediainfo}
 \pointskillNinety{}{AWS MediaConvert}
-\pointskillSeventy{}{Hybrik}
+\pointskillSeventy{}{Hybrik (Dolby)}
 
 \chartlabel{Mobile Development:}\\
 \pointskillSixty{}{Java Android (Dalvik)}
@@ -196,18 +195,21 @@
 \pointskillEighty{}{Jira (backlog, sprint)}
 \pointskillEighty{}{Confluence / wiki}
 \pointskillEighty{}{Scrum (grooming, review)}
+
+
+\chartlabel{Scripting:}\\
+\pointskillEighty{}{Bash, shell (Linux, Mac)}
+\pointskillSeventy{}{CMD prompt, Powershell}
 }
 
 \addtothirdsidebar{
-\vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
+\vspace*{-9mm}  % Adjusts the vertical space, move content up by 10mm
 
   \chartlabel{Instant messaging:}\\
-  \pointskillSeventy{}{Teams}
-  \pointskillEighty{}{Slack}
+  \pointskillEighty{}{Teams, Slack}
 
   \chartlabel{UX / UI:}\\
-  \pointskillSeventy{}{Figma}
-  \pointskillSeventy{}{Miro}
+  \pointskillSeventy{}{Figma, Miro}
 
   \chartlabel{AI:}\\
   \pointskillEighty{}{Chatgpt 4.0}
@@ -219,23 +221,26 @@
 	\barskill{}{\textbf{German} (Educational, 2 years)}{35}
 	\barskill{}{\textbf{Spanish} (Beginner, Duolingo)}{25}
 
-	\profilesection{Interests}
-		\skill{\faLaptop}{Ai, WebGl/VR/AR, streaming}
-		\skill{\faFilm}{Movie, theather, cinema}
-		\skill{\faGlobe}{International geopolitics}
-		\skill{\faSwimmer}{Swimming, Basket-ball}
-
 	\profilesection{Honors \& awards}
 		\skill{\faAward}{NDS CEO Award · Jan 2006}
 		\skill{\faAward}{CSI Awards 2014}
 
   \profilesection{Teaching, Talks }
 		\skill{\faChalkboardTeacher}{HTML5 coach (India, Israel, UK, US)}
-		\skill{\faChalkboardTeacher}{WebRTC (Intl dev conf, Berlin)}
+		\skill{\faChalkboardTeacher}{WebRTC (Intl dev conference, Berlin)}
+    \skill{\faChalkboardTeacher}{Cross-cultural trainer, TMC}
 
+
+	\profilesection{Interests}
+		\skill{\faUnity}{Ai, WebGl/VR/AR, streaming}
+		\skill{\faGlobe}{International geopolitics (+ cinema)}
+		\skill{\faSwimmer}{Swimming, Basket-ball}
+
+	\profilesection{Education}
+		\skill{\faLaptop}{Engineer's degree (ESEO) 1998}
 	\profilesection{Short Bio}
 	\aboutme{
-    With over 26 years of experience in web development across digital TV, media platforms, and mobile devices, I have led the architecture, development, and deployment of numerous projects. My leadership role included enhancing our software stack by creating modules, conducting code reviews, and implementing agile practices. I am committed to developing user-friendly and scalable web solutions using technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
+    With more than 26 years of experience in web development for digital TV, media platforms, and mobile devices, I have spearheaded the architecture, development, and deployment of multiple projects. My leadership has focused on improving our software stack through module creation, code reviews, and the adoption of agile practices. I am dedicated to crafting user-friendly and scalable web solutions leveraging technologies such as AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
 }
 %-------------------------------------------------------------------------------
 %                         TABLE ENTRIES RIGHT COLUMN
@@ -315,7 +320,7 @@
 \begin{cvtable}
     \cvitemRight{May,\\2015\\–\\Dec,\\2016}
     {Front-End Developer}
-    {Abbeal, Canal+, Paris}
+    {Abbeal, Canal+,  Paris (FR)}
     {
       \textbf{Role}: Development and maintenance of WebApp interfaces for digital TV receivers (STB) across various platforms including TNT, SATELLITE, and IPTV, reaching millions of subscribers.\\
       * \textbf{Front-End}: Managed with WEBPACK, featuring HTML/JS/CSS execution in a Qt/webkit instance on a Linux system. Utilized ES2015 standards with Babel transpilation, GRUNT build management, and NODE.js.\\
@@ -332,7 +337,7 @@
 \begin{cvtable}
     \cvitemRight{Dec,\\2014\\–\\Apr,\\2015}
     {Android + NodeJS Developer for IoT}
-    {Cisco, Paris}
+    {Cisco,  Paris (FR)}
     {
       \textbf{Project}: ConnectedLife - Integrated IoT with TV experiences.\\
       * \textbf{Technologies}: Utilized openHAB for IoT ecosystem management, implementing localization with Bluetooth (iBeacons), WiFi, and RFID. Developed a playlist system for delinearized TV based on user analytics, incorporating dynamic ad insertion.\\
@@ -347,7 +352,7 @@
 \begin{cvtable}
     \cvitemRight{Aug,\\2014\\–\\Dec,\\2014}
     {HTML5/JS Front-End Developer}
-    {Cisco, Paris}
+    {Cisco,  Paris (FR)}
     {
       \textbf{Project}: Development of a WebApp for ZON TV Portugal.\\
         Led the design and implementation using Vanilla JS, CSS3, and HTML5, creating a custom UI manager for MVC view arrangement.
@@ -370,36 +375,93 @@
 \begin{cvtable}
     \cvitemRight{Jan,\\2014\\–\\Jul,\\2014}
     {BackboneJS + ThreeJS Front-End Developer}
-    {Cisco, Paris}
+    {Cisco, Paris (FR)}
     {
-      \textbf{Project}: Development of an HTML5 app for Belgacom on RDK middleware.\\
-      \textbf{Responsibilities}: Developed interactive features using CSS3D for GPU hardware acceleration, and managed data interactions using vanilla WebSockets and AJAX within a BackboneJS framework.
-       Integrated complex WebGL content managed by Three.JS according to COLLADA standards for 3D object models, enhanced with animations via Tween.JS.
-       Adapted the application for tablet platforms like iPad (iOS8) and Nexus 10 (Android) using Hammer.JS for touch event handling.
-
-      \textbf{Challenges}: Packaged the WebApp using cross-platform tools like Adobe PhoneGap and CocoonJS, addressing performance optimizations and compatibility issues on low-end STBs without WebGL support.
-       Explored various rendering options (Three.JS CanvasRenderer, CSSRenderer, Parallax scrolling) to maintain performance and visual quality.
-
-      \textbf{Outcome}: Successfully delivered a proof of concept that balanced performance with hardware acceleration, leading the competition.
+      \textbf{Project}: HTML5 app for Belgacom on RDK middleware.\\
+      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, and AJAX in BackboneJS; integrated 3D content using Three.JS with animations via Tween.JS; optimized for iOS/Android tablets using Hammer.JS for touch events.\\
+      \textbf{Challenges}: Used PhoneGap and CocoonJS for cross-platform packaging, optimizing performance on low-end STBs lacking WebGL.\\
+      \textbf{Outcome}: Delivered a high-performance POC with HW acceleration.\\
     }
 \end{cvtable}
+
+
 
 \begin{cvtable}
     \cvitemRight{Mar,\\2013\\–\\Jan,\\2014}
     {CSS3D + HTML5/JS Front-End Developer}
     {France}
     {
-      \textbf{Project}: Development of HTML5, CSS3D applications for embedded devices (smart TV, Raspberry Pi), showcased at CES 2014.\\
+      \textbf{Project}: Developed HTML5, CSS3D applications for embedded devices, showcased at CES 2014.\\
       \textbf{Responsibilities}:
-          Implemented application features across multiple devices including LG TVs, HDMI sticks, tablets, and laptops using HTML, JS, CSS3D, and WebGL.\\
-          Utilized BackboneJS for MVC framework, ThreeJS for 3D modeling, and TweenJS for animations.\\
-          Enhanced performance with hardware acceleration assessments across various HTML5 engines like QT5/Webkit1, WebKitNix, and Chromium.\\
-          Managed cross-compilation efforts for platforms including LG TV, Raspberry Pi, Cotton Candy (FXI), and MacOSX.\\
-          Compiled and built GStreamer for Windows and MacOSX, ensuring compatibility and performance.\\
-      \textbf{Outcome}: Achieved high performance and compatibility across all targeted devices, contributing to a successful presentation at CES and further engagements with Belgacom and Zon TV.\\
+          Built features for devices including LG TVs, HDMI sticks, and tablets using HTML, CSS3D, and WebGL, with BackboneJS for MVC and ThreeJS for 3D modeling.
+          Optimized performance via hardware acceleration tests across engines (QT5/Webkit, WebKitNix, Chromium). Managed cross-compilation for platforms like LG TV, Raspberry Pi, and MacOSX.\\
+      \textbf{Outcome}: Delivered a high-performance solution, gaining interest from Belgacom and Zon TV.\\
     }
 \end{cvtable}
 
+
+\begin{cvtable}
+    \cvitemRight{Dec,\\2010\\–\\Jul,\\2012}
+    {WebKit / QT Developer (Full Stack)}
+    {NDS Technologies, Paris, France}
+    {
+      \textbf{Project}: Full-stack development for QT / WebKit integration on specialized chipsets.\\
+      \textbf{Responsibilities}:
+          Ported and cross-compiled QT / WebKit to target chipsets. Built Java-QT bridges for WebView control, integrating QWebView and Android WebView. Distributed binaries globally via shell scripting (India, Israel). Packaged HTML5 content as .CRX archives for a Cisco France app store.\\
+      \textbf{Skills}: Programming, Cross-Compiling, Java-QT Integration, Global Distribution, App Packaging\\
+    }
+\end{cvtable}
+\\
+\begin{cvtable}
+    \cvitemRight{Nov,\\2006\\–\\Nov,\\2010}
+    {Web Engine Integration}
+    {Canal +, Paris}
+    {
+      \textbf{Project}: Integration of NetFront web engine and international team coordination.\\
+      \textbf{Responsibilities}:
+          Led NDS/ACCESS collaborations for middleware integration, managing full-stack dev from standards implementation to cross-platform porting (WIN32, LINUX, chipsets).
+          Supervised internships, POCs, including proprietary widget banks and STB-to-iPhone mobile integrations.\\
+      \textbf{Skills}: Web Techs, Project Management, X-Departmental Communication\\
+    }
+\end{cvtable}
+
+
+\begin{cvtable}
+    \cvitemRight{Feb,\\2002\\–\\Oct,\\2006}
+    {Full-Stack Browser Integration}
+    {Canal+,  Paris (FR)}
+    {
+      \textbf{Project}: Integration of Opera 6 for Canal+ Technologies.\\
+      \textbf{Responsibilities}:
+          Spearheaded integration and customization of Opera 6, supporting JavaScript 1.3 and CSS 2.
+          Led Java-Opera bridge development for enhanced multimedia handling and client-specific plugins.
+          Initiated and managed online game implementations on STB, advancing HTML development standards.\\
+      \textbf{Skills}: Web Engine Integration, Cross-Platform Development, Client Customization\\
+    }
+    \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
+    {Pay-TV System Integrator}
+    {Canal+,  Paris (FR)}
+    {
+      \textbf{Project}: System integration and testing for Canal+.\\
+      \textbf{Responsibilities}:
+          Developed test scripts and managed multimedia platform integration.
+          Supported hardware/software setup and provided international client support.\\
+      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support
+    }
+
+    \cvitemRight{Oct,\\1998\\–\\Aug,\\1999}
+    {DSP Engineer: AEC for Mobiles}
+    {ALTEN, Issy Les Moulineaux (FR)}
+    {
+      \textbf{Project}: Acoustic Echo Cancellation (AEC) development for mobile handsets and speakerphones.\\
+      \textbf{Responsibilities}:
+          Developed and tuned AEC algorithms for echo suppression, noise reduction, and speech quality enhancement.
+          Created a Windows executable in Visual C++ for hands-free call simulations and testing in real and simulated environments.\\
+      \textbf{Skills}: Signal Processing, MATLAB, C/C++ Programming, Audio Algorithm Tuning
+    }
+
+
+\end{cvtable}
 
 
 \end{document}
