--- a/src/main.tex
+++ b/src/main.tex
@@ -240,7 +240,7 @@
 		\skill{\faLaptop}{Engineer's degree (ESEO) 1998}
 	\profilesection{Short Bio}
 	\aboutme{
-    With more than 26 years of experience in web development for digital TV, media platforms, and mobile devices, I have spearheaded the architecture, development, and deployment of multiple projects. My leadership has focused on improving our software stack through module creation, code reviews, and the adoption of agile practices. I am dedicated to crafting user-friendly and scalable web solutions leveraging technologies such as AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI.}\\
+    With more than 26 years of experience in web development for digital TV, media platforms, and mobile devices, I spearheaded the architecture, development, and deployment of multiple projects. My leadership focused on improving our software stack through module creation, code reviews, and the adoption of agile practices. Dedicated to crafting user-friendly and scalable solutions leveraging technologies such as AWS, Angular, Vue.js, React, PHP, Python, HTML5, AI.}\\
 }
 %-------------------------------------------------------------------------------
 %                         TABLE ENTRIES RIGHT COLUMN
@@ -270,7 +270,7 @@
 \end{cvtable}
 
 \begin{cvtable}
-    \cvitemRight{Sept,\\2017\\–\\Jan,\\2020}
+    \cvitemRight{Sep,\\2017\\–\\Jan,\\2020}
     {Full stack key player}
     {LVL Studio, Montreal}
     {
@@ -303,7 +303,7 @@
 
 
 \begin{cvtable}
-    \cvitemRight{Jan,\\2017\\–\\August,\\2017}
+    \cvitemRight{Jan,\\2017\\–\\Aug,\\2017}
     {Full stack coder}
     {Alayacare, Montreal}
     {
@@ -446,7 +446,7 @@
       \textbf{Responsibilities}:
           Developed test scripts and managed multimedia platform integration.
           Supported hardware/software setup and provided international client support.\\
-      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support
+      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support\\
     }
 
     \cvitemRight{Oct,\\1998\\–\\Aug,\\1999}
