--- a/src/main.tex
+++ b/src/main.tex
@@ -227,17 +227,19 @@
 
   \profilesection{Teaching, Talks }
 		\skill{\faChalkboardTeacher}{HTML5 coach (India, Israel, UK, US)}
-		\skill{\faChalkboardTeacher}{WebRTC (Intl dev conference, Berlin)}
     \skill{\faChalkboardTeacher}{Cross-cultural trainer, TMC}
+		\skill{\faChalkboardTeacher}{ WebRTC (Intl dev conference, Berlin)}
 
-
-	\profilesection{Interests}
-		\skill{\faUnity}{Ai, WebGl/VR/AR, streaming}
-		\skill{\faGlobe}{International geopolitics (+ cinema)}
-		\skill{\faSwimmer}{Swimming, Basket-ball}
-
+\vspace{-3mm} % Adjust the negative space as needed
 	\profilesection{Education}
 		\skill{\faLaptop}{Engineer's degree (ESEO) 1998}
+
+	\profilesection{Interests}
+		\skill{\faUnity}{WebGl/VR/AR, streaming, AI}
+		\skill{\faGlobe}{International geopolitics (+ cinema)}
+		\skill{\faSwimmer}{Swimming, Basket-ball, Cycling}
+
+
 	\profilesection{Short Bio}
 	\aboutme{
     With more than 26 years of experience in web development for digital TV, media platforms, and mobile devices, I spearheaded the architecture, development, and deployment of multiple projects. My leadership focused on improving our software stack through module creation, code reviews, and the adoption of agile practices. Dedicated to crafting user-friendly and scalable solutions leveraging technologies such as AWS, Angular, Vue.js, React, PHP, Python, HTML5, AI.}\\
@@ -433,31 +435,28 @@
     {
       \textbf{Project}: Integration of Opera 6 for Canal+ Technologies.\\
       \textbf{Responsibilities}:
-          Spearheaded integration and customization of Opera 6, supporting JavaScript 1.3 and CSS 2.
-          Led Java-Opera bridge development for enhanced multimedia handling and client-specific plugins.
-          Initiated and managed online game implementations on STB, advancing HTML development standards.\\
-      \textbf{Skills}: Web Engine Integration, Cross-Platform Development, Client Customization\\
+          Spearheaded integration and customization of Opera 6 for Canal+ Technologies, with support for JavaScript 1.3, CSS 2, and Netscape plugins. Led Java-Opera bridge development for advanced multimedia handling and client-specific plugins. Led online game implementations on STB, setting early HTML standards.\\
+      \textbf{Skills}: Advanced Web Engine Integration, Cross-Platform Porting, Client-Specific Customization, Multimedia and Game Integration.\\
     }
     \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
     {Pay-TV System Integrator}
     {Canal+,  Paris (FR)}
     {
       \textbf{Project}: System integration and testing for Canal+.\\
-      \textbf{Responsibilities}:
-          Developed test scripts and managed multimedia platform integration.
-          Supported hardware/software setup and provided international client support.\\
-      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support\\
+      \textbf{Responsibilities}:\
+          Developed comprehensive test scripts and managed end-to-end multimedia platform integration.
+          Supported complex HW/SW setups providing extensive international client support, both remote and on-site.\\
+      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support.\\
     }
 
     \cvitemRight{Oct,\\1998\\–\\Aug,\\1999}
     {DSP Engineer: AEC for Mobiles}
     {ALTEN, Issy Les Moulineaux (FR)}
     {
-      \textbf{Project}: Acoustic Echo Cancellation (AEC) development for mobile handsets and speakerphones.\\
+      \textbf{Project}: Acoustic Echo Cancellation (AEC) development for improving audio clarity in mobile handsets and speakerphone environments.\\
       \textbf{Responsibilities}:
-          Developed and tuned AEC algorithms for echo suppression, noise reduction, and speech quality enhancement.
-          Created a Windows executable in Visual C++ for hands-free call simulations and testing in real and simulated environments.\\
-      \textbf{Skills}: Signal Processing, MATLAB, C/C++ Programming, Audio Algorithm Tuning
+          Developed and finely tuned AEC algorithms for effective echo suppression, advanced noise reduction, and improved speech quality. Created a Windows executable in Visual C++ to simulate hands-free calls and conduct testing in both real-world and controlled environments.\\
+      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Algorithm Tuning.
     }
 
 
