--- a/src/main.tex
+++ b/src/main.tex
@@ -419,7 +419,7 @@
     {Web Engine Integration}
     {Canal +, Paris}
     {
-      \textbf{Project}: Integration of NetFront web engine and international team coordination.\\
+      \textbf{Project}: Integration of the NetFront web engine, coordinating efforts across international teams for seamless deployment.\\
       \textbf{Responsibilities}:
           Led NDS/ACCESS collaborations for middleware integration, managing full-stack dev from standards implementation to cross-platform porting (WIN32, LINUX, chipsets).
           Supervised internships, POCs, including proprietary widget banks and STB-to-iPhone mobile integrations.\\
@@ -436,7 +436,7 @@
       \textbf{Project}: Integration of Opera 6 for Canal+ Technologies.\\
       \textbf{Responsibilities}:
           Spearheaded integration and customization of Opera 6 for Canal+ Technologies, with support for JavaScript 1.3, CSS 2, and Netscape plugins. Led Java-Opera bridge development for advanced multimedia handling and client-specific plugins. Led online game implementations on STB, setting early HTML standards.\\
-      \textbf{Skills}: Advanced Web Engine Integration, Cross-Platform Porting, Client-Specific Customization, Multimedia and Game Integration.\\
+      \textbf{Skills}: Advanced Web Engine Integration, Cross-Platform Porting, Custom Client-Specific Customization, Multimedia and Game Content Integration.\\
     }
     \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
     {Pay-TV System Integrator}
